--- a/.htmlhintrc
+++ b/.htmlhintrc
@@ -1,29 +1,24 @@
 {
-    "doctype-first": true,
-    "doctype-html5": true,
-    "head-script-disabled": true,
-    "style-disabled": true,
-    "title-require": true,
+    "tagname-lowercase": true,
     "attr-lowercase": true,
-    "attr-no-duplication": true,
-    "attr-no-unnecessary-whitespace": true,
-    "attr-unsafe-chars": true,
     "attr-value-double-quotes": true,
     "attr-value-not-empty": false,
-    "alt-require": true,
-    "input-requires-label": false,
+    "attr-no-duplication": true,
+    "doctype-first": true,
     "tag-pair": true,
     "tag-self-close": false,
-    "tagname-lowercase": true,
-    "empty-tag-not-self-closed": true,
-    "src-not-empty": true,
-    "href-abs-or-rel": false,
-    "id-class-ad-disabled": true,
-    "id-class-value": "dash",
-    "id-unique": true,
-    "inline-script-disabled": true,
-    "inline-style-disabled": true,
-    "space-tab-mixed-disabled": "space",
     "spec-char-escape": true,
-    "attr-value-not-empty": false
+    "id-unique": true,
+    "src-not-empty": true,
+    "title-require": true,
+    "alt-require": true,
+    "doctype-html5": true,
+    "id-class-value": "dash",
+    "style-disabled": false,
+    "inline-style-disabled": false,
+    "inline-script-disabled": false,
+    "space-tab-mixed-disabled": "space",
+    "id-class-ad-disabled": false,
+    "href-abs-or-rel": false,
+    "attr-unsafe-chars": true
 }
