--- a/package.json
+++ b/package.json
@@ -17,23 +17,29 @@
   },
   "homepage": "https://github.com/shakDeka/layout-designer-project-lvl3#readme",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/register": "^7.12.10",
+    "del": "^6.0.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^6.1.0",
     "gulp-concat": "^2.6.1",
-    "gulp-pug": "^4.0.1",
-    "gulp-sass": "^4.1.0",
-    "gulp-svg-sprite": "^1.5.0",
-    "htmlhint": "^0.14.2",
-    "node-sass": "^5.0.0",
-    "stylelint": "^13.9.0",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^20.0.0",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-pug": "^5.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-svg-sprite": "^1.3.7",
+    "gulp-ttf2woff": "^1.1.1",
+    "gulp-ttf2woff2": "^4.0.1",
+    "htmlhint": "^1.1.4",
+    "sass": "^1.32.13",
+    "stylelint": "^13.13.1",
+    "stylelint-config-rational-order": "^0.0.4",
+    "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.18.0"
+    "stylelint-scss": "^3.19.0"
   },
   "dependencies": {
-    "bootstrap": "^4.6.0",
-    "gulp": "^4.0.2"
+    "bootstrap": "^5.0.0",
+    "bootstrap-icons": "^1.5.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1"
   }
 }
