--- a/package.json
+++ b/package.json
@@ -1,45 +1,44 @@
 {
-  "name": "layout-designer-project-lvl3",
-  "description": "[![Actions Status](https://github.com/shakDeka/layout-designer-project-lvl3/workflows/hexlet-check/badge.svg)](https://github.com/shakDeka/layout-designer-project-lvl3/actions)",
+  "name": "layout-designer-tools-project",
+  "version": "1.0.1",
+  "description": "[![Actions Status](https://github.com/skoch13/layout-designer-tools-project-lvl3/workflows/hexlet-check/badge.svg)](https://github.com/skoch13/layout-designer-tools-project-lvl3/actions)",
+  "name": "layout-designer-tools-project",
   "version": "1.0.0",
+  "description": "[![Actions Status](https://github.com/skoch13/layout-designer-tools-project-lvl3/workflows/hexlet-check/badge.svg)](https://github.com/skoch13/layout-designer-tools-project-lvl3/actions)",
   "main": "index.js",
+  "devDependencies": {
+    "bootstrap": "^5.1.3",
+    "browser-sass": "^1.22.8",
+    "browser-sync": "^2.27.9",
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-pug": "^5.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-svg-sprite": "^1.5.0",
+    "sass": "^1.51.0",
+    "ss": "^0.0.1",
+    "stylelint": "^14.8.2",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.2.0",
+    "surge": "^0.23.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "gulp dev",
+    "build": "gulp build",
+    "lintcss": "npx stylelint --fix ./app/scss/**/*.scss",
+    "deploy": "surge --domain noisy-bedroom.surge.sh build/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shakDeka/layout-designer-project-lvl3.git"
+    "url": "git+https://github.com/skoch13/layout-designer-tools-project-lvl3.git"
   },
-  "author": "shakDeka",
+  "author": "sk",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/shakDeka/layout-designer-project-lvl3/issues"
+    "url": "https://github.com/skoch13/layout-designer-tools-project-lvl3/issues"
   },
-  "homepage": "https://github.com/shakDeka/layout-designer-project-lvl3#readme",
-  "devDependencies": {
-    "del": "^6.0.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^6.1.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^8.0.0",
-    "gulp-pug": "^5.0.0",
-    "gulp-sass": "^5.1.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-svg-sprite": "^1.3.7",
-    "gulp-ttf2woff": "^1.1.1",
-    "gulp-ttf2woff2": "^4.0.1",
-    "htmlhint": "^1.1.4",
-    "sass": "^1.32.13",
-    "stylelint": "^13.13.1",
-    "stylelint-config-rational-order": "^0.0.4",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.19.0"
-  },
-  "dependencies": {
-    "bootstrap": "^5.0.0",
-    "bootstrap-icons": "^1.5.0",
-    "jquery": "^3.6.0",
-    "popper.js": "^1.16.1"
-  }
+  "homepage": "https://github.com/skoch13/layout-designer-tools-project-lvl3#readme"
 }
